// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdnylx sc-gtssRu fbGLvz eBFUyR"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdnylx sc-gtssRu iwZKpE eBFUyR"
>
  foo
</button>
`;
